BS5 - Stream Overflow - https://github.com/humhub/humhub-internal/issues/740 (#7595)

--- a/static/scss/_comment.scss
+++ b/static/scss/_comment.scss
@@ -72,11 +72,6 @@ $commentLeftMargin: 35px;
         }
     }
 
-    /*-- Since v1.2 overflow: visible */
-    .flex-grow-1 {
-        overflow: visible;
-    }
-
     .jp-progress {
         background-color: #dbdcdd !important;
     }
